--- a/src/output.css
+++ b/src/output.css
@@ -688,6 +688,18 @@ video {
   height: 100%;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[80\] {
+  height: 80;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -734,6 +746,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .items-center {
@@ -1193,6 +1209,10 @@ video {
     height: 80px;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1215,6 +1235,10 @@ video {
 
   .md\:max-w-\[1250px\] {
     max-width: 1250px;
+  }
+
+  .md\:flex-wrap {
+    flex-wrap: wrap;
   }
 
   .md\:items-center {
