--- a/src/output.css
+++ b/src/output.css
@@ -612,7 +612,8 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mb-5 {
+.my-5 {
+  margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
 
@@ -640,8 +641,8 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-\[350px\] {
-  margin-top: 350px;
+.mt-\[100px\] {
+  margin-top: 100px;
 }
 
 .block {
@@ -676,10 +677,8 @@ video {
   height: 100px;
 }
 
-
 .h-\[430px\] {
   height: 430px;
-
 }
 
 .h-\[60px\] {
@@ -710,12 +709,12 @@ video {
   width: 33.333333%;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-40 {
+  width: 10rem;
 }
 
-.w-52 {
-  width: 13rem;
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-6 {
@@ -916,11 +915,6 @@ video {
   padding: 2rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -946,6 +940,26 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -956,6 +970,22 @@ video {
 
 .pt-\[30px\] {
   padding-top: 30px;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -971,13 +1001,19 @@ video {
   font-size: 10px;
 }
 
-.text-\[15px\] {
-  font-size: 15px;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -1064,7 +1100,6 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
@@ -1105,7 +1140,6 @@ video {
   content: var(--tw-content);
   opacity: 90%;
 }
-
 
 .after\:duration-500::after {
   content: var(--tw-content);
@@ -1205,10 +1239,6 @@ video {
     height: 620px;
   }
 
-  .md\:h-\[760px\] {
-    height: 760px;
-  }
-
   .md\:h-\[80px\] {
     height: 80px;
   }
@@ -1258,6 +1288,10 @@ video {
     background-image: url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png');
   }
 
+  .md\:p-3 {
+    padding: 0.75rem;
+  }
+
   .md\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -1267,9 +1301,24 @@ video {
     padding-top: 70px;
   }
 
+  @media (min-width: 768px) {
+    .md\:md\:text-\[15px\] {
+      font-size: 15px;
+    }
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:text-xl {
