--- a/src/output.css
+++ b/src/output.css
@@ -566,16 +566,20 @@ video {
   top: -400;
 }
 
+.top-\[-25px\] {
+  top: -25px;
+}
+
 .top-\[-50px\] {
   top: -50px;
 }
 
-.top-\[38px\] {
-  top: 38px;
+.top-\[110px\] {
+  top: 110px;
 }
 
-.top-\[80px\] {
-  top: 80px;
+.top-\[38px\] {
+  top: 38px;
 }
 
 .z-20 {
@@ -780,8 +784,16 @@ video {
   width: 25%;
 }
 
+.w-\[23\%\] {
+  width: 23%;
+}
+
 .w-\[50\%\] {
   width: 50%;
+}
+
+.w-\[45\%\] {
+  width: 45%;
 }
 
 .w-\[500px\] {
@@ -1295,6 +1307,14 @@ video {
 
   .md\:block {
     display: block;
+  }
+  
+  .md\:relative {
+    position: relative;
+  }
+
+  .md\:top-\[-25px\] {
+    top: -25px;
   }
 
   .md\:inline-block {
